derniers correctifs sur la barre filtre : alignement des icones et hauteur de cards d'hébergements

--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,8 @@ nav ul li a:hover{
 
 .container-cards .card{
 	width: 100%;
+	max-height: 207px;
+
 }
 .container-cards img{
 	width: 100%;
@@ -466,6 +468,8 @@ footer{
 	.filterbar li{
 		padding: 12px 14px;
 		font-size: 16px;
+		text-align: start;
+
 	}
 
 
@@ -486,7 +490,7 @@ footer{
     }
 	.container-cards .card{
 		height: 200px;
-
+		box-sizing: border-box;
 	}
 	.container-cards img{
 		height: 124px;
